--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ nav ul li {
     margin-right: 20px;
 }
 nav ul li a{
-    color: white;
+    color: #fff;
+    text-decoration: none;
 }
 nav ul li:last-child {
     margin-right: 0;
@@ -287,6 +288,7 @@ footer p {
 /* Новые стили для кнопки "Корзина" */
 #cart-button {
     background-size: cover;
+    background-color: #00653d;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
@@ -340,3 +342,4 @@ footer p {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);}
+
